Replaced new Boolean() call by Boolean.valueOf()